--- a/resources/css/style.scss
+++ b/resources/css/style.scss
@@ -669,8 +669,8 @@ body {
             // @include each4(margin-left, 240px, 66px, 20px, 20px);
             // @include each4(margin-right, 240px, 66px, 20px, 20px);
 
-            @include each6(margin-left, 214px, 142px, 103px, 60px, 20px, 20px);
-            @include each6(margin-right, 214px, 142px, 103px, 60px, 20px, 20px);
+            @include each6(margin-left, 214px, 142px, 103px, 60px, 20px, 20px, 20px);
+            @include each6(margin-right, 214px, 142px, 103px, 60px, 20px, 20px, 20px);
 
             // @include wide {
             //     margin-left: 240px;
@@ -708,11 +708,11 @@ body {
         $extra_text_box_padding: 0px;
         .swiper-slide h2 {    
             
-            @include each6(font-size, 80px, 58px, 56px, 50px, 29px, 29px);
-            @include each6(line-height, 85px, 70px, 70px, 60px, 36px, 36px);
+            @include each6(font-size, 80px, 58px, 56px, 50px, 29px, 29px, 29px);
+            @include each6(line-height, 85px, 70px, 70px, 60px, 36px, 36px, 36px);
 
-            @include each6(padding-top, 100px, 100px, 100px, 100px, 20px, 20px);
-            @include each6(max-width, 856px, 605px, 609px, 609px, 402px, 294px);
+            @include each6(padding-top, 100px, 100px, 100px, 100px, 20px, 20px, 20px);
+            @include each6(max-width, 856px, 605px, 609px, 509px, 402px, 332px, 294px);
 
             color: #F7C74F;
             font-family: Poppins;
@@ -733,7 +733,7 @@ body {
             font-style: normal;
             font-weight: 600;
             line-height: normal;
-            @include each6(max-width, 856px, 605px, 609px, 609px, 402px, 294px);
+            @include each6(max-width, 856px, 605px, 609px, 609px, 402px, 332px, 294px);
         }
 
         .swiper-slide p {
@@ -747,7 +747,7 @@ body {
             font-weight: 300;
             line-height: 30px; /* 166.667% */
             // max-width: calc(717px + $extra_text_box_padding);
-            @include each6(max-width, 856px, 605px, 609px, 609px, 402px, 294px);
+            @include each6(max-width, 856px, 605px, 609px, 609px, 402px, 332px, 294px);
         }
 
         .swiper-slide div { 
@@ -757,15 +757,15 @@ body {
             // margin-right:240px;
             
 
-            @include each6(margin-right, calc(214px + 30px - 40px), calc(30px + 30px), calc(-20px + 0px), calc(30px + 35px), calc(20px + 19px), calc(20px + 19px));
+            @include each6(margin-right, calc(214px + 30px - 40px), calc(30px + 30px), calc(-20px + 0px), calc(30px + 35px), calc(20px + 19px), calc(10px + 19px), calc(20px + 19px));
 
-            @include each6(bottom, 100px, 100px, 100px, 100px, 80px, 80px); //30px;           /* Align the image to the bottom of the wrapper */
+            @include each6(bottom, 100px, 100px, 100px, 100px, 80px, 80px, 80px); //30px;           /* Align the image to the bottom of the wrapper */
             right: 0;            /* Align the image to the right of the wrapper */
             // width: 485px;         /* Optional: Set a fixed width for the image */
             // height: 485px;        /* Keep the image's aspect ratio */
             
-            @include each6(height, 485px, 400px, 400px, 400px, 230px, 230px);
-            @include each6(width, 485px, 400px, 400px, 400px, 230px, 230px);
+            @include each6(height, 485px, 400px, 400px, 230px, 230px, 230px, 230px);
+            @include each6(width, 485px, 400px, 400px, 230px, 230px, 230px, 230px);
 
             opacity: 0.0;
             // margin-right: 44px;
@@ -796,7 +796,7 @@ body {
 
     .swiper-pagination {
         // @include each4(margin-right, 240px, 66px, 20px, 20px);
-        @include each6(margin-right, calc(214px), calc(142px), calc(103px), calc(60px), calc(20px), calc(20px));
+        @include each6(margin-right, calc(214px), calc(142px), calc(103px), calc(60px), calc(20px), calc(20px), calc(20px));
     }
 
     .swiper-pagination-bullet {
